added lab 6 framework

--- a/labs/5/index.html
+++ b/labs/5/index.html
@@ -41,15 +41,13 @@
                 </div>
             </header>
             <div id="content">
-                <h1 class="section_heading">Lab 5</h1>
+                <h1 class="section_heading">Lab 5: Localization Using A Particle Filter (MCL)</h1>
                 <div class="briefing_wrapper">
                     <a href="https://docs.google.com/presentation/d/1XaqoE-7pWkUXWJedwFRZ4_Fcorbxj_O1U67aGKkZMfU/edit?usp=sharing" target="_blank">
                         <div class="briefing_link">Lab 5 Briefing</div>
                     </a>
                 </div>
                 <div class='lab_report_content' >
-                    <h1 id="lab5localizationusingaparticlefiltermcl">Lab 5: Localization Using A Particle Filter (MCL)</h1>
-
                     <h1 id="tableofcontents">Table of Contents</h1>
                     <ol>
                         <li><a href="#overview-motivation">Overview and Motivation (Abbie)</a></li>
