--- a/labs/6/index.html
+++ b/labs/6/index.html
@@ -41,7 +41,15 @@
                 </div>
             </header>
             <div id="content">
-                <h1 class="section_heading">Lab 6</h1>
+                <h1 class="section_heading">Lab 6: Path Planning using Search and Sampling Algorithms</h1>
+                <div class="briefing_wrapper">
+                    <a href="https://docs.google.com/presentation/d/1Syo-9Za7VV9Or432AEH4up4HsV4KAv5T4JzyiF3EqZg/edit?usp=sharing" target="_blank">
+                        <div class="briefing_link">Lab 6 Briefing</div>
+                    </a>
+                </div>
+                <div class='lab_report_content'>
+
+                </div>
             </div>
             <footer id="image_footer" class="header_footer">
                 <img class="banner_image" src="../../img/Boston_Back_Bay_reflection.jpg" style="top: -75px">
