--- a/labs/index.html
+++ b/labs/index.html
@@ -66,7 +66,7 @@
                     <div class="lab_link">
                         <a href="6">
                             <div class="lab_label">Lab 6</div>
-                            <img class="lab_image" src="../img/test_image.jpg">
+                            <img class="lab_image_true" src="../img/lab6/lab_image2.png">
                         </a>
                     </div>
                     <div class="lab_link">
