added final challenge img

--- a/labs/index.html
+++ b/labs/index.html
@@ -72,7 +72,7 @@
                     <div class="lab_link">
                             <a href="final">
                                 <div class="lab_label">Final Project</div>
-                                <img class="lab_image" src="../img/test_image.jpg">
+                                <img class="lab_image_true" src="../img/final_challenge/challenge_image.png">
                             </a>
                     </div>
                 </div>
