--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="navbar">
             <a id = "nav_home" href="."><b>RSS Team 3</b> MIT Spring 2019</a>
             <ul id="nav_list">
-                <li><a href="https://github.mit.edu/rss2019-3">Github</a></li>
-                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Videos</a></li>
+                <li><a href="https://github.com/rlargaespada?tab=repositories">Github</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1o4Tw1yF9yXiVXw5WtcRvHfgVtxNRPsV2?usp=sharing">Videos</a></li>
                 <li><a href="./labs">Labs</a></li>
             </ul>
         </div>
@@ -33,8 +33,8 @@
                 <ul id="menu">
                     <li class="selected"><a href=".">Home</a></li>
                     <li class=""><a href="./labs">Labs</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Video</a></li>
-                    <li><a href="https://github.mit.edu/rss2019-3">Github</a></li>
+                    <li><a href="https://github.com/rlargaespada?tab=repositories">Github</a></li>
+                    <li><a href="https://drive.google.com/drive/folders/1o4Tw1yF9yXiVXw5WtcRvHfgVtxNRPsV2?usp=sharing">Videos</a></li>
                 </ul>
             </div>
         </div>
